[Bug #18580] Prohibit non-numeric Range#include?