spec/ruby/core/range/cover_spec.rb
@@ -4,6 +4,7 @@ require_relative 'shared/cover_and_include'
 require_relative 'shared/cover'
 
 describe "Range#cover?" do
+  it_behaves_like :range_cover_and_include_nonnumeric, :cover?
   it_behaves_like :range_cover_and_include, :cover?
   it_behaves_like :range_cover, :cover?
   it_behaves_like :range_cover_subrange, :cover?
